log
Sat 15 Apr 2023 11:33:58 PM UTC: 
 tests:  0|6
total_score: 0/70
40addcc
Sat 15 Apr 2023 11:42:36 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
b30441e
Sat 15 Apr 2023 11:42:49 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f30092e
Sat 15 Apr 2023 11:44:15 PM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
9a05890
Sat 15 Apr 2023 11:46:32 PM UTC: 
 hashmap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
8af62d5
Sun 16 Apr 2023 12:02:45 AM UTC: 
 hashmap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:44:12: error: request for member ‘buckets’ in something not a structure or union
   44 |     if(hash->buckets[i]->key == NULL)
      |            ^~
hashmap.c:46:20: error: request for member ‘buckets’ in something not a structure or union
   46 |         strcpy(hash->buckets[i]->key,key);
      |                    ^~
hashmap.c:47:13: error: request for member ‘buckets’ in something not a structure or union
   47 |         hash->buckets[i]->value = value;
      |             ^~
hashmap.c:49:20: error: request for member ‘buckets’ in something not a structure or union
   49 |         while (hash->buckets[i]->key != NULL){
      |                    ^~
hashmap.c:52:20: error: request for member ‘buckets’ in something not a structure or union
   52 |         strcpy(hash->buckets[i]->key,key);
      |                    ^~
hashmap.c:53:13: error: request for member ‘buckets’ in something not a structure or union
   53 |         hash->buckets[i]->value = value;
      |             ^~
Compilation failed
1b79761
Sun 16 Apr 2023 12:03:19 AM UTC: 
 hashmap.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  0|0
e2d902d
Sun 16 Apr 2023 12:04:24 AM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
d8a4aae
Sun 16 Apr 2023 12:07:29 AM UTC: 
 hashmap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  0|0
c92f12e
Sun 16 Apr 2023 12:10:41 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:49:69: error: invalid type argument of ‘->’ (have ‘int’)
   49 |         while (map->buckets[i]->key != NULL && strcmp(map->buckets[i->key],key)!= 0){
      |                                                                     ^~
Compilation failed
2bf1a9a
Sun 16 Apr 2023 12:10:57 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
908165b
Sun 16 Apr 2023 12:11:41 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a2471e5
Sun 16 Apr 2023 12:36:53 AM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
6676396
Sun 16 Apr 2023 12:46:20 AM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
7083b9c
Sun 16 Apr 2023 12:48:10 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a438457
Sun 16 Apr 2023 12:52:40 AM UTC: 
 hashmap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  0|0
d7bfeae
Sun 16 Apr 2023 01:00:15 AM UTC: 
 hashmap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|0
42147ed
Sun 16 Apr 2023 01:03:06 AM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
122b9eb
Sun 16 Apr 2023 01:04:07 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7d33348
Sun 16 Apr 2023 12:17:50 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6d26450
Sun 16 Apr 2023 12:18:40 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c65fff6
Sun 16 Apr 2023 12:18:57 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
54ece40
Sun 16 Apr 2023 12:21:03 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
0cd8d0a
Sun 16 Apr 2023 12:26:50 PM UTC: 
 hashmap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  0|0
7844f9b
Sun 16 Apr 2023 12:30:49 PM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
0aa9bca
Sun 16 Apr 2023 12:31:30 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5f54a2e
Sun 16 Apr 2023 12:33:21 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
96ded27
Sun 16 Apr 2023 12:33:35 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
dfef1d0
Sun 16 Apr 2023 12:39:07 PM UTC: 
 hashmap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 30/70
b71c46b
Sun 16 Apr 2023 12:52:34 PM UTC: 
 hashmap.c | 23 -----------------------
 1 file changed, 23 deletions(-)
 tests:  5|4
total_score: 30/70
aa7b1bc
Sun 16 Apr 2023 11:56:39 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 30/70
30742dd
Sun 16 Apr 2023 11:57:12 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|4
total_score: 30/70
042ac15
Mon 17 Apr 2023 12:06:19 AM UTC: 
 hashmap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  0|0
4fbd4fa
Mon 17 Apr 2023 12:07:47 AM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
0b9e15d
Mon 17 Apr 2023 12:08:41 AM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
196f441
Mon 17 Apr 2023 12:11:22 AM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 30/70
ea36a75
Mon 17 Apr 2023 12:14:10 AM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:86:12: error: argument 2 null where non-null expected [-Werror=nonnull]
   86 |         if(strcmp(map->buckets[i]->key, NULL) == 0) return NULL;
      |            ^~~~~~
In file included from test.c:3:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/string.h:156:12: note: in a call to function ‘strcmp’ declared ‘nonnull’
  156 | extern int strcmp (const char *__s1, const char *__s2)
      |            ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
935d758
Mon 17 Apr 2023 12:14:26 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:86:32: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
   86 |         if(map->buckets[i]->key, NULL == 0) return NULL;
      |                                ^
cc1: all warnings being treated as errors
Compilation failed
bb5f843
Mon 17 Apr 2023 12:14:45 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6e27d3f
Mon 17 Apr 2023 12:15:11 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
cab00b2
Fri 21 Apr 2023 02:46:08 PM UTC: 
 hashmap.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:83:79: error: expected ‘)’ before ‘{’ token
   83 |     while((map->buckets[i] != NULL && is_equal(map->buckets[i]->key,key) != 1)
      |          ~                                                                    ^
      |                                                                               )
   84 |     {
      |     ~                                                                          
hashmap.c:92:1: error: expected expression before ‘}’ token
   92 | }
      | ^
hashmap.c:92:1: error: control reaches end of non-void function [-Werror=return-type]
   92 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e5847f5
Fri 21 Apr 2023 02:47:06 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
25d126f
